--- a/E6/Latex/analisi.tex
+++ b/E6/Latex/analisi.tex
@@ -164,29 +164,47 @@ tutti gli altri dati calcolati sopra.
     \small
     \begin{tabular}{c c c c c}
         \toprule
-        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        Nr. giri & C $\pm$ dC $[\si{\metre^3\s^{-1}}]$ & $\bar{P}d$ $[\si{\Pa\meter}]$ & Regime & (C\ped{lam} $\pm$ dC\ped{lam}) $[\si{\metre^3\s^{-1}}]$ \\
         \midrule
-        4 & Transitorio & $6.6372 \cdot 10^{-7}$ & $9.6387 \cdot 10^{-8}$ & $4.0867 \cdot 10^{-6}$ \\
-        5 & Transitorio & $2.6187 \cdot 10^{-6}$ & $3.7851 \cdot 10^{-7}$ & $5.0695 \cdot 10^{-6}$ \\
-        6 & Viscoso & $1.0252 \cdot 10^{-5}$ & $1.4868 \cdot 10^{-6}$ & $1.2172 \cdot 10^{-5}$ \\
-        7 & Viscoso & $3.3973 \cdot 10^{-5}$ & $5.0061 \cdot 10^{-6}$ & $4.2660 \cdot 10^{-5}$ \\
-        8 & Viscoso & $8.9041 \cdot 10^{-5}$ & $1.3853 \cdot 10^{-5}$ & $1.1275 \cdot 10^{-4}$ \\
+        4 & $(7 \pm 1) \cdot 10^{-7}$ & 0.38 & Transitorio & $(4.1 \pm 0.6) \cdot 10^{-6}$ \\
+        5 & $(2.6 \pm 0.4) \cdot 10^{-6}$ & 0.47 & Transitorio & $(5.1 \pm 0.7) \cdot 10^{-6}$ \\
+        6 & $(1.0 \pm 0.2) \cdot 10^{-5}$ & 1.1 & Viscoso & $(1.2 \pm 0.2) \cdot 10^{-5}$ \\
+        7 & $(3.4 \pm 0.5) \cdot 10^{-5}$ & 3.9 & Viscoso & $(4.3 \pm 0.6) \cdot 10^{-5}$ \\
+        8 & $(9 \pm 1) \cdot 10^{-5}$ & 10 & Viscoso & $(1.0 \pm 0.1) \cdot 10^{-4}$  \\
         \bottomrule
     \end{tabular}
 \end{center}
+
+%% attenzione qui tabelle di prova
+%\paragraph{Tubo 8000x4 VERSIONE 2\\}
+%\begin{center}
+%    \small
+%    \begin{tabular}{c c c c c c}
+%        \toprule
+%        Nr. giri & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & Regime & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ & dC\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+%        \midrule
+%        4 & $6.6372 \cdot 10^{-7}$ & $1 \cdot 10^{-7}$ & Transitorio & $4.0867 \cdot 10^{-6}$ & $6 \cdot 10^{-7}$ \\
+%        5 & $2.6187 \cdot 10^{-6}$ & $4 \cdot 10^{-7}$ & Transitorio & $5.0695 \cdot 10^{-6}$ & $7 \cdot 10^{-7}$ \\
+%        6 & $1.0252 \cdot 10^{-5}$ & $1 \cdot 10^{-6}$ & Viscoso & $1.2172 \cdot 10^{-5}$ & $2 \cdot 10^{-6}$ \\
+%        7 & $3.3973 \cdot 10^{-5}$ & $5 \cdot 10^{-6}$ & Viscoso & $4.2660 \cdot 10^{-5}$ & $6 \cdot 10^{-6}$ \\
+%        8 & $8.9041 \cdot 10^{-5}$ & $1 \cdot 10^{-5}$ & Viscoso & $1.1275 \cdot 10^{-4}$ & $1 \cdot 10^{-5}$  \\
+%        \bottomrule
+%    \end{tabular}
+%\end{center}
+%% attenzione qui tabelle di prova
 
 \paragraph{Tubo 800x4 \\}
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
         \toprule
-        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        Nr. giri & C $\pm$ dC $[\si{\metre^3\s^{-1}}]$ & $\bar{P}d$ $[\si{\Pa\meter}]$ & Regime & C\ped{lam} $\pm$ dC\ped{lam} $[\si{\metre^3\s^{-1}}]$ \\
         \midrule
-        4 & Transitorio & $4.5369 \cdot 10^{-6}$ & $6.9837 \cdot 10^{-7}$ & $6.5988 \cdot 10^{-6}$ \\
-        5 & Transitorio & $1.4268 \cdot 10^{-5}$ & $2.1533 \cdot 10^{-6}$ & $1.0076 \cdot 10^{-5}$ \\
-        6 & Transitorio & $3.9427 \cdot 10^{-5}$ & $6.0105 \cdot 10^{-6}$ & $3.4668 \cdot 10^{-5}$ \\
-        7 & Viscoso & $1.4588 \cdot 10^{-4}$ & $2.4544 \cdot 10^{-5}$ & $1.2420 \cdot 10^{-4}$ \\
-        8 & Viscoso & $3.5455 \cdot 10^{-4}$ & $7.0765 \cdot 10^{-5}$ & $4.1040 \cdot 10^{-4}$ \\
+        4 & $(4.5 \pm 0.7) \cdot 10^{-6}$ & 0.061 & Transitorio & $(7 \pm 1) \cdot 10^{-6}$ \\
+        5 & $(1.4 \pm 0.2) \cdot 10^{-5}$ & 0.093 & Transitorio & $(1.0 \pm 0.1) \cdot 10^{-5}$ \\
+        6 & $(3.9 \pm 0.6) \cdot 10^{-5}$ & 0.32 & Transitorio & $(3.5 \pm 0.5) \cdot 10^{-5}$ \\
+        7 & $(1.5 \pm 0.2) \cdot 10^{-4}$ & 1.1 & Viscoso & $(1.2 \pm 0.2) \cdot 10^{-4}$ \\
+        8 & $(3.5 \pm 0.7) \cdot 10^{-4}$ & 3.8 & Viscoso & $(4.1 \pm 0.5) \cdot 10^{-4}$ \\
         \bottomrule
     \end{tabular}
 \end{center}
@@ -196,33 +214,37 @@ tutti gli altri dati calcolati sopra.
     \small
     \begin{tabular}{c c c c c}
         \toprule
-        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        Nr. giri & C $\pm$ dC $[\si{\metre^3\s^{-1}}]$ & $\bar{P}d$ $[\si{\Pa\meter}]$ & Regime & C\ped{lam} $\pm$ dC\ped{lam} $[\si{\metre^3\s^{-1}}]$ \\
         \midrule
-        4 & Transitorio & $3.1873 \cdot 10^{-7}$ & $4.5748 \cdot 10^{-8}$ & $1.2640 \cdot 10^{-6}$ \\
-        5 & Viscoso & $1.1557 \cdot 10^{-6}$ & $1.6527 \cdot 10^{-7}$ & $1.7122 \cdot 10^{-6}$ \\
-        6 & Viscoso & $3.9668 \cdot 10^{-6}$ & $5.6652 \cdot 10^{-7}$ & $4.6588 \cdot 10^{-6}$ \\
-        7 & Viscoso & $1.5039 \cdot 10^{-5}$ & $2.1674 \cdot 10^{-6}$ & $1.4098 \cdot 10^{-5}$ \\
-        8 & Viscoso & $1.4673 \cdot 10^{-5}$ & $2.1082 \cdot 10^{-6}$ & $9.0374 \cdot 10^{-5}$ \\
+        4 & $(3.2 \pm 0.5) \cdot 10^{-7}$ & 0.48 & Transitorio &  $(1.3 \pm 0.2) \cdot 10^{-6}$ \\
+        5 & $(1.2 \pm 0.2) \cdot 10^{-6}$ & 0.65 & Viscoso & $(1.7 \pm 0.2) \cdot 10^{-6}$ \\
+        6 & $(4.0 \pm 0.6) \cdot 10^{-6}$ & 1.8 & Viscoso & $(4.7 \pm 0.7) \cdot 10^{-6}$ \\
+        7 & $(1.5 \pm 0.2) \cdot 10^{-5}$ & 5.3 & Viscoso & $(1.4 \pm 0.2) \cdot 10^{-5}$ \\
+        8 & $(1.5 \pm 0.2) \cdot 10^{-5}$ & 34 & Viscoso & $(9 \pm 1) \cdot 10^{-5}$ \\
         \bottomrule
     \end{tabular}
 \end{center}
+%WTF! gli ultimi due valori sono praticamente uguali... sarà corretto? mah! chi mai lo saprà?% per altro è l'unico valore di viscoso che non torna...
 
 \paragraph{Tubo 800x2.5 \\} 
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
         \toprule
-        Nr. giri & Regime & C $[\si{\metre^3\s^{-1}}]$ & dC $[\si{\metre^3\s^{-1}}]$ & C\ped{teorica} $[\si{\metre^3\s^{-1}}]$ \\
+        Nr. giri & C $\pm$ dC $[\si{\metre^3\s^{-1}}]$ & $\bar{P}d$ $[\si{\Pa\meter}]$ & Regime & C\ped{lam} $\pm$ dC\ped{lam} $[\si{\metre^3\s^{-1}}]$ \\
         \midrule
-        4 & Transitorio & $1.9624 \cdot 10^{-6}$ & $2.8576 \cdot 10^{-7}$ & $2.1044 \cdot 10^{-6}$ \\
-        5 & Transitorio & $5.0064 \cdot 10^{-6}$ & $7.2104 \cdot 10^{-7}$ & $4.0259 \cdot 10^{-6}$ \\
-        6 & Transitorio & $1.4855 \cdot 10^{-5}$ & $2.1570 \cdot 10^{-6}$ & $1.2846 \cdot 10^{-5}$ \\
-        7 & Viscoso & $4.6792 \cdot 10^{-5}$ & $7.0025 \cdot 10^{-6}$ & $4.8615 \cdot 10^{-5}$ \\
-        8 & Viscoso & $1.3087 \cdot 10^{-4}$ & $2.1278 \cdot 10^{-5}$ & $1.2590 \cdot 10^{-4}$ \\
+        4 & $(2.0 \pm 0.3) \cdot 10^{-6}$ & 0.09 & Transitorio & $(2.1 \pm 0.3) \cdot 10^{-6}$ \\
+        5 & $(5.0 \pm 0.7) \cdot 10^{-6}$ & 0.15 & Transitorio & $(4.0 \pm 0.6) \cdot 10^{-6}$ \\
+        6 & $(1.5 \pm 0.2) \cdot 10^{-5}$ & 0.49 & Transitorio & $(1.3 \pm 0.2) \cdot 10^{-5}$ \\
+        7 & $(4.7 \pm 0.7) \cdot 10^{-5}$ & 1.8 & Viscoso & $(4.9 \pm 0.7) \cdot 10^{-5}$ \\
+        8 & $(1.3 \pm 0.2) \cdot 10^{-4}$ & 4.8 & Viscoso & $(1.3 \pm 0.2) \cdot 10^{-4}$ \\
         \bottomrule
     \end{tabular}
 \end{center}
 
-Qunidi in base hai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 e in alcuni casi anche a 6 giri della valvola a spillo siano quelli meno concordi con i valori teorici. Questo è dovuto al fatto che il regime  di flusso in queste situazioni non era viscoso, ma era transitorio. Pertanto come già accennato in precedenza non possediamo una formula specifica per valutare la conduttanza in tale regime (flusso transitorio) ed è per questo motivo che i valori non sono del tutto compatibili, in quanto il valore sperimentale restituisce un valore della conduttanza in pesenza di un regime di flusso transitorio mentre il valore teorico ricavato è valido/corretto nelle ipotesi in cui il regime di flusso sia viscoso e laminare. Infatti anche per lo stesso regime di flusso viscoso non si dispone di una formula che permetta di calcolare la condutanza se non nel caso di flusso viscoso laminare. 
+%la compatibilità è FFTTT FFTTT FFTTF TTTTT (F = False; T = True)
 
+In base ai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 siano praticamente sempre incompatibili con i relativi valori teorici. Questo è dovuto al fatto che il regime di flusso in queste situazioni non era viscoso, bensì transitorio. Inoltre, non siamo a conoscenza di alcuna formula specifica che descriva correttamente la conduttanza in condizioni di regime transitorio.
+Per quanto riguarda i dati ricavati con i giri più alti (6, 7 e 8) il regime diventa nella maggiorparte dei casi viscoso ed essendo nelle condizioni di flusso viscoso laminare descritte dal numero di Reynolds abbiamo potuto calcolare la conduttanza teorica esattamente. I valori ricavati empiricamente sono risultati compatibili con quelli ricavati teoricamente. % ad eccetto del valore del tubo 8000x2.5 a 8 giri, il quale è fuori con un poggiuolo. :D
 
+% la domanda comunque rimane: come abbiamo calcolato la conduttanza per i valori in condizione di regime transitorio? domani me lo spiegate, nè sì? thanks
