--- a/E6/Latex/analisi.tex
+++ b/E6/Latex/analisi.tex
@@ -244,7 +244,7 @@ tutti gli altri dati calcolati sopra.
 
 %la compatibilità è FFTTT FFTTT FFTTF TTTTT (F = False; T = True)
 
-In base ai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 siano praticamente sempre incompatibili con i relativi valori teorici. Questo è dovuto al fatto che il regime di flusso in queste situazioni non era viscoso, bensì transitorio. Inoltre, non siamo a conoscenza di alcuna formula specifica che descriva correttamente la conduttanza in condizioni di regime transitorio.
-Per quanto riguarda i dati ricavati con i giri più alti (6, 7 e 8) il regime diventa nella maggiorparte dei casi viscoso ed essendo nelle condizioni di flusso viscoso laminare descritte dal numero di Reynolds abbiamo potuto calcolare la conduttanza teorica esattamente. I valori ricavati empiricamente sono risultati compatibili con quelli ricavati teoricamente. % ad eccetto del valore del tubo 8000x2.5 a 8 giri, il quale è fuori con un poggiuolo. :D
+In base ai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 giri della valvola a spillo siano praticamente sempre incompatibili con i relativi valori teorici. Questo è dovuto al fatto che il regime di flusso in queste situazioni non era viscoso, bensì transitorio. Inoltre, non siamo a conoscenza di alcuna formula specifica che descriva correttamente la conduttanza in condizioni di regime transitorio.
+Per quanto riguarda i dati ricavati con i giri più alti della valvola  aspillo (6, 7 e 8) il regime diventa nella maggiorparte dei casi viscoso ed essendo nelle condizioni di flusso viscoso laminare, descritte dal numero di Reynolds, abbiamo potuto calcolare la conduttanza teorica. I valori ricavati empiricamente sono risultati compatibili con quelli ricavati teoricamente. % ad eccetto del valore del tubo 8000x2.5 a 8 giri, il quale è fuori con un poggiuolo. :D
 
 % la domanda comunque rimane: come abbiamo calcolato la conduttanza per i valori in condizione di regime transitorio? domani me lo spiegate, nè sì? thanks
