--- a/E6/Latex/analisi.tex
+++ b/E6/Latex/analisi.tex
@@ -159,7 +159,7 @@ Poiché le conduttanze teoriche in regime viscoso laminare dipendono dalla press
 e al variare del flusso in ingresso. I valori di $C\ped{lam}$ sono elencati nelle seguenti tabelle che includono anche
 tutti gli altri dati calcolati sopra.
 
-\paragraph{Tubo 8000x4 \\}
+\paragraph{Tubo 8000x4}
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
@@ -193,7 +193,7 @@ tutti gli altri dati calcolati sopra.
 %\end{center}
 %% attenzione qui tabelle di prova
 
-\paragraph{Tubo 800x4 \\}
+\paragraph{Tubo 800x4}
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
@@ -209,7 +209,7 @@ tutti gli altri dati calcolati sopra.
     \end{tabular}
 \end{center}
 
-\paragraph{Tubo 8000x2.5 \\}
+\paragraph{Tubo 8000x2.5}
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
@@ -226,7 +226,7 @@ tutti gli altri dati calcolati sopra.
 \end{center}
 %WTF! gli ultimi due valori sono praticamente uguali... sarà corretto? mah! chi mai lo saprà?% per altro è l'unico valore di viscoso che non torna...
 
-\paragraph{Tubo 800x2.5 \\} 
+\paragraph{Tubo 800x2.5} 
 \begin{center}
     \small
     \begin{tabular}{c c c c c}
@@ -245,6 +245,8 @@ tutti gli altri dati calcolati sopra.
 %la compatibilità è FFTTT FFTTT FFTTF TTTTT (F = False; T = True)
 
 In base ai dati da noi ottenuti possiamo notare come i valori della conduttanza corrispondenti a 4, 5 giri della valvola a spillo siano praticamente sempre incompatibili con i relativi valori teorici. Questo è dovuto al fatto che il regime di flusso in queste situazioni non era viscoso, bensì transitorio. Inoltre, non siamo a conoscenza di alcuna formula specifica che descriva correttamente la conduttanza in condizioni di regime transitorio.
-Per quanto riguarda i dati ricavati con i giri più alti della valvola  aspillo (6, 7 e 8) il regime diventa nella maggiorparte dei casi viscoso ed essendo nelle condizioni di flusso viscoso laminare, descritte dal numero di Reynolds, abbiamo potuto calcolare la conduttanza teorica. I valori ricavati empiricamente sono risultati compatibili con quelli ricavati teoricamente. % ad eccetto del valore del tubo 8000x2.5 a 8 giri, il quale è fuori con un poggiuolo. :D
+Tuttavia si capisce facilmente che i valori di conduttanza si avvicinano a quelli teorici nel regime molecolare per pochi giri di apertura della valvola.
+
+Per quanto riguarda i dati ricavati con i giri più alti della valvola  aspillo (6, 7 e 8) il regime diventa viscoso ed essendo nelle condizioni di flusso viscoso laminare, descritte dal numero di Reynolds, abbiamo potuto calcolare la conduttanza teorica. I valori ricavati empiricamente sono risultati compatibili con quelli ricavati teoricamente. % ad eccetto del valore del tubo 8000x2.5 a 8 giri, il quale è fuori con un poggiuolo. :D
 
 % la domanda comunque rimane: come abbiamo calcolato la conduttanza per i valori in condizione di regime transitorio? domani me lo spiegate, nè sì? thanks
