--- a/O1/Latex/introduzione.tex
+++ b/O1/Latex/introduzione.tex
@@ -1,2 +1,4 @@
 \section{Introduzione}
 
+Gli obbiettivi di questa sperienza di laboratorio riguardante l'ambito fisico dell'ottica geometrica sono rispettivamente di ricavare il fuoco di una lente convergente e divergente, osservare e stimare la differenza per il fuoco di una lente convergente tra i fuochi dovuta all'aberrazione cromatica e sferica per la lente convergente 
+
