--- a/O1/Latex/title.tex
+++ b/O1/Latex/title.tex
@@ -1,13 +1,13 @@
 \begin{center}
 
-     	{\huge }
+     	{\huge Misura della focale di lenti convergenti e divergenti.}
 	\vspace{0.5cm}
 
-      	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
+      	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani, Martina Cammilli} \\
       	{Bazzanella.Davide@gmail.com} \\
 		{\large Gruppo A6} \\
 	
 	\vspace{0.3cm}
-      	{\large 30 ottobre 2013}
+      	{\large 11 Novembre 2013}
 
 \end{center}
