--- a/O1/Latex/Relazione.tex
+++ b/O1/Latex/Relazione.tex
@@ -16,8 +16,8 @@
 
 \input{title.tex}
 \input{introduzione.tex}
-\input{Pressione_vs_pompate.tex}
-\input{FindGas.tex}
+\input{Materiale.tex}
+\input{Procedimento.tex}
 %\input{conclusioni.tex}
 
 \end{document}
