--- a/O1/Latex/Procedimento.tex
+++ b/O1/Latex/Procedimento.tex
@@ -22,15 +22,17 @@ Inoltre per non appesantire la lettura nel seguito indicheremo con queste letter
 \end{equation*}
 \begin{equation}
 	\text{Legge dei puni coniugati:} \qquad \frac{1}{f} \,=\, \frac{1}{p} + \frac{1}{q}
+	\label{coniugati}
 \end{equation}
 \begin{equation}
 	\text{Legge del costruttore di lenti:} \qquad \frac{1}{f} \,=\, (n-1)\left(\frac{1}{R\ped{1}}-\frac{1}{R\ped{2}}\right)
+	\label{costruttore}
 \end{equation}
 
 
 \subsection{Fuoco della lente convergente}
 
-Come primo obbiettivo ci siamo posti quello di calcolare il fuoco della lente convergente. Per ottenere questo riultato abbiamo misurato per dodici volte il valore che il parametro $q$ assume al variare del parametro $p$. Per fare questo abbiamo tenuta ferma la sorgente luminosa, abbiamo incrementato di volta in volta la distanza tra la lente e la sorgente luminosa e di seguito abbiamo rilevato il valore di $q$ mettendo a fuoco l'immagine proiettata sullo schermo.
+Come primo obbiettivo ci siamo posti quello di calcolare il fuoco della lente convergente. Per ottenere questo riultato abbiamo misurato per dodici volte il valore che il parametro $q$ assume al variare del parametro $p$. Tenendo ferma la sorgente luminosa, abbiamo incrementato di volta in volta la distanza tra la lente e la sorgente luminosa e di seguito abbiamo rilevato il valore di $q$ mettendo a fuoco l'immagine proiettata sullo schermo.
 
 E' importante sottolineare che nel caso in cui l'immagine si è formata ad una certa distanza dlla lente, riuscire a mettere a fuoco quest'ultima per ricavare il valore più probabile di $q$ non è risultato essere semplice a causa dell'effetto di profondità di campo. Abbiamo deciso quindi di prendere due misure di $q$. Infatti una volta che l'imagine ci sembrava essere a fuoco abbiamo mosso lo schermo in avanti e in dietro in modo da avere l'immagine leggermente fuori fuoco in entrambe le situazioni e abbiamo preso questi due valori. Facendo quindi una media di questi due valori dovremmo otteniamo il valore più probabile per la nostra variabile $q$.
 
@@ -41,7 +43,26 @@ Abbiamo ottenuto che il valore di $f$ risulta essre:
 	f \ped{div} \,=\, XXX
 \end{equation}
 
+Oltre al calcolo del valore del fuoco per questa lente vogliamo anche ricavare il valore della magnificazione per ogni coppia di valori di $p$ e $q$. Ricordiamo che la magniicazione è l'ingrandimento dell'immagine ($h \ped{imm}$) rispetto alle dimensioni reali dell'oggetto ($h$).
 
+\begin{equation}
+	m \,=\, \frac{h \ped{imm}}{h}
+\end{equation}
+
+Inoltre per avere una verifica della correttezza dei dati da noi presi possiamo mettere a confronto il valore appena trovato della magnificazione con quello che si può ricavare dalla seguente relazione:
+
+\begin{equation}
+	m \,=\, \frac{q}{p}
+\end{equation} 
+
+\subsection{Aberrazione cromatica relativa alla lente convergente}
+
+Per valutare e osservare il fenomeno dell'aberrazione cromatica per la lente convergente abbiamo calcolato grazie alla relazione (\ref{coniugati}) il fuoco relativo ai raggi luminosi monocromatici rossi e blu. Per ottenere i raggi monocromatici non abbiamo fatto altro che porre un vetrino colorato difronte alla sorgente luminosa. I valori di $p$ e $q$ sono stati presi seguendo lo stesso procedimento adottato per la lente convergente, salvo il fatto che è stato preso solo un valore dei due parametri.
+I risultati da noi ottenuti sono riportati nella tabella sottostante:
+
+[TABELLA!!!]
+
+Come si può notare dai dati in tabella i valori per il fuoco della lente convergente sono differerenti a seconda della lunghezza d'onda (colore) dei raggi luminosi incidenti su quest'ultima. 
 
 
 
