--- a/O1/Latex/Procedimento.tex
+++ b/O1/Latex/Procedimento.tex
@@ -34,26 +34,30 @@ Inoltre per non appesantire la lettura nel seguito indicheremo con queste letter
 
 Come primo obbiettivo ci siamo posti quello di calcolare il fuoco della lente convergente. Per ottenere questo riultato abbiamo misurato per dodici volte il valore che il parametro $q$ assume al variare del parametro $p$. Tenendo ferma la sorgente luminosa, abbiamo incrementato di volta in volta la distanza tra la lente e la sorgente luminosa e di seguito abbiamo rilevato il valore di $q$ mettendo a fuoco l'immagine proiettata sullo schermo.
 
-E' importante sottolineare che nel caso in cui l'immagine si è formata ad una certa distanza dlla lente, riuscire a mettere a fuoco quest'ultima per ricavare il valore più probabile di $q$ non è risultato essere semplice a causa dell'effetto di profondità di campo. Abbiamo deciso quindi di prendere due misure di $q$. Infatti una volta che l'imagine ci sembrava essere a fuoco abbiamo mosso lo schermo in avanti e in dietro in modo da avere l'immagine leggermente fuori fuoco in entrambe le situazioni e abbiamo preso questi due valori. Facendo quindi una media di questi due valori dovremmo otteniamo il valore più probabile per la nostra variabile $q$.
+E' importante sottolineare che nel caso in cui l'immagine si è formata ad una grande distanza dalla lente, riuscire a mettere a fuoco non è stato semplice a causa dell'effetto di profondità di campo. Abbiamo deciso quindi di prendere due misure di $q$. Infatti una volta che l'immagine ci sembrava essere a fuoco abbiamo mosso lo schermo in avanti e in dietro in modo da avere l'immagine leggermente fuori fuoco in entrambe le situazioni e abbiamo preso questi due valori. Facendone la media di questi due valori dovremmo ottenere un valore più probabile per la nostra variabile $q$, rispetto ad un singolo valore preso quando l'immagine è a ``fuoco''.
 
-Quindi una volta ottenuti i valori  di $p$ e $q$ abbiamo calcolato per ognuno di questi il relativo valore di $f$ e infine abbiamo fatto una media di questi dodici valori del fuoco della lente convergente.
-Abbiamo ottenuto che il valore di $f$ risulta essre:
+Una volta ottenuti i valori  di $p$ e $q$, abbiamo calcolato per ognuno il relativo valore di $f$ e infine ne abbiamo fatto una media.
+Il valore della focale $f$ della lente convergente ottenuto è:
 
 \begin{equation}
 	f \ped{div} \,=\, XXX
 \end{equation}
 
-Oltre al calcolo del valore del fuoco per questa lente vogliamo anche ricavare il valore della magnificazione per ogni coppia di valori di $p$ e $q$. Ricordiamo che la magniicazione è l'ingrandimento dell'immagine ($h \ped{imm}$) rispetto alle dimensioni reali dell'oggetto ($h$).
+Inoltre vogliamo ricavare il valore della magnificazione per ogni coppia $p$ e $q$. Ricordiamo che la magnificazione è il rapporto tra le dimensioni dell'immagine ottenuta ($h \ped{imm}$) rispetto alle dimensioni reali dell'oggetto ($h$).
 
 \begin{equation}
-	m \,=\, \frac{h \ped{imm}}{h}
+	m_{1} \,=\, \frac{h \ped{imm}}{h}
 \end{equation}
 
-Inoltre per avere una verifica della correttezza dei dati da noi presi possiamo mettere a confronto il valore appena trovato della magnificazione con quello che si può ricavare dalla seguente relazione:
+Infine per avere una verifica della correttezza dei dati da noi presi possiamo mettere a confronto il valore della magnificazione trovato empiricamente con quello che si può ricavare dalla seguente relazione:
 
 \begin{equation}
-	m \,=\, \frac{q}{p}
-\end{equation} 
+	m_{2} \,=\, \frac{q}{p}
+\end{equation}
+
+[Tabella m e m\']
+
+Come si può osservare dai dati in tabella i due valori della magnificazione ricavati con entrambi i procedimenti risultano compatibili entro i propri errori. 
 
 \subsection{Aberrazione cromatica relativa alla lente convergente}
 
